--- a/helm/templates/issuer-api.yml
+++ b/helm/templates/issuer-api.yml
@@ -33,9 +33,11 @@ spec:
     spec:
       containers:
         - name: issuer-api
-          image: {{ $.Values.registry }}/waltid/issuer-api:{{ .version }}
-          imagePullPolicy: Always
+          image: {{ $.Values.imagePrefix }}waltid/issuer-api:{{ .version }}
+          imagePullPolicy: {{ .pullPolicy }}
           env:
+            - name: ISSUER_BASE_URL
+              value: "{{ $.Values.urlSchema }}://{{ $.Values.issuerApiHost }}"
             - name: ISSUER_API_PORT
               value: '7002'
           ports:
@@ -48,6 +50,27 @@ spec:
           configMap:
             name: issuer-api-config
 
+---
+
+{{- if eq $.Values.environment "local" }}
+---
+
+# Issuer API Service
+#
+apiVersion: v1
+kind: Service
+metadata:
+  name: issuer-api
+spec:
+  type: NodePort
+  ports:
+    - port: 7002
+      nodePort: {{ .nodePort }}
+  selector:
+    app.kubernetes.io/name: issuer-api
+---
+
+{{- else }}
 ---
 
 # Issuer API Service
@@ -76,7 +99,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`issuer-api.nessus-tech.io`)
+    - match: Host("{{ $.Values.issuerApiHost }}")
       kind: Rule
       services:
         - name: issuer-api
@@ -84,5 +107,7 @@ spec:
   tls:
     secretName: origin-tls
 ---
+
+{{- end }}
 
 {{- end }}
