--- a/client/pom.xml
+++ b/client/pom.xml
@@ -6,13 +6,13 @@
 
     <parent>
         <groupId>org.nessus.didcomm</groupId>
-        <artifactId>nessus-didcomm</artifactId>
+        <artifactId>nessus-identity</artifactId>
         <version>25.1.0-SNAPSHOT</version>
     </parent>
 
     <name>Nessus DIDComm :: Client</name>
 
-    <artifactId>nessus-didcomm-client</artifactId>
+    <artifactId>nessus-identity-client</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
