--- a/helm/templates/wallet-dev.yml
+++ b/helm/templates/wallet-dev.yml
@@ -19,17 +19,38 @@ spec:
     spec:
       containers:
         - name: wallet-dev
-          image: {{ $.Values.registry }}/waltid/waltid-dev-wallet:{{ .version }}
-          imagePullPolicy: Always
+          image: {{ $.Values.imagePrefix }}waltid/waltid-dev-wallet:{{ .version }}
+          imagePullPolicy: {{ .pullPolicy }}
           env:
             - name: NUXT_PUBLIC_ISSUER_CALLBACK_URL
-              value: "https://wallet-dev.nessus-tech.io"
+              value: "{{ $.Values.urlSchema }}://{{ $.Values.devWalletHost }}"
             - name: NUXT_PUBLIC_DEMO_WALLET_URL
-              value: "https://wallet.nessus-tech.io"
+              value: "{{ $.Values.urlSchema }}://{{ $.Values.demoWalletHost }}"
             - name: PORT
               value: "7104"
           ports:
             - containerPort: 7104
+---
+
+{{- if eq $.Values.environment "local" }}
+---
+
+# Wallet Dev Service
+#
+apiVersion: v1
+kind: Service
+metadata:
+  name: wallet-dev
+spec:
+  type: NodePort
+  ports:
+    - port: 7104
+      nodePort: {{ .nodePort }}
+  selector:
+    app.kubernetes.io/name: wallet-dev
+---
+
+{{- else }}
 ---
 
 # Wallet Dev Service
@@ -58,12 +79,12 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`wallet-dev.nessus-tech.io`) && PathPrefix(`/wallet-api`)
+    - match: Host("{{ $.Values.devWalletHost }}") && PathPrefix("/wallet-api")
       kind: Rule
       services:
         - name: wallet-api
           port: 7001
-    - match: Host(`wallet-dev.nessus-tech.io`)
+    - match: Host("{{ $.Values.devWalletHost }}")
       kind: Rule
       services:
         - name: wallet-dev
@@ -71,5 +92,7 @@ spec:
   tls:
     secretName: origin-tls
 ---
+
+{{- end }}
 
 {{- end }}
