[#163] ebsi-tck: Issue an in-time credential

--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -38,6 +38,10 @@
             <groupId>io.ktor</groupId>
             <artifactId>ktor-server-content-negotiation-jvm</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-server-status-pages-jvm</artifactId>
+        </dependency>
 
         <!-- Test -->
         <dependency>
