--- a/proxy/src/main/resources/application.conf
+++ b/proxy/src/main/resources/application.conf
@@ -2,7 +2,7 @@ proxy {
   server {
     host = "0.0.0.0"
     port = 9090
-    external_url = "http://localhost:9090"
+    base_url = "https://proxy.nessus-tech.io:8443"
   }
   tls {
     enabled = false
