--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.nessus.identity</groupId>
+        <groupId>io.nessus.identity</groupId>
         <artifactId>nessus-identity</artifactId>
         <version>25.1.0-SNAPSHOT</version>
     </parent>
@@ -17,11 +17,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.nessus.identity</groupId>
+            <groupId>io.nessus.identity</groupId>
             <artifactId>nessus-identity-service</artifactId>
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
         <dependency>
             <groupId>id.walt.openid4vc</groupId>
             <artifactId>waltid-openid4vc-jvm</artifactId>
@@ -71,19 +75,9 @@
                         <phase>package</phase>
                         <goals><goal>shade</goal></goals>
                         <configuration>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.nessus.identity.proxy.OpenId4VCServiceKt</mainClass>
+                                    <mainClass>io.nessus.identity.proxy.OpenId4VCServiceKt</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
