--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -10,6 +10,12 @@ proxy {
     keystore_file = "tls/keystore.p12"
     keystore_password = "changeit"
   }
+  db {
+    jdbcUrl = "jdbc:postgresql://localhost:5432/waltid"
+    driverClassName = "org.postgresql.Driver"
+    username = "waltid"
+    password = "waltid"
+  }
   walt {
     wallet-api = "http://localhost:7001"
     issuer-api = "http://localhost:7002"
