--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -1,26 +1,13 @@
-proxy {
-  server {
-    host = "0.0.0.0"
-    port = 9090
-    base_url = "https://proxy.nessus-tech.io:8443"
+portal {
+  holder {
+    walletApi = "http://localhost:7001"
+    userEmail = "user@email.com"
+    userPassword = "password"
   }
-  tls {
-    enabled = false
-    key_alias = "ebsi.localhost"
-    keystore_file = "tls/keystore.p12"
-    keystore_password = "changeit"
-  }
-  db {
-    jdbcUrl = "jdbc:postgresql://localhost:5432/waltid"
+  database {
+    jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
+    username = "postgres"
+    password = "postgres"
     driverClassName = "org.postgresql.Driver"
-    username = "waltid"
-    password = "waltid"
-  }
-  walt {
-    wallet-api = "http://localhost:7001"
-    issuer-api = "http://localhost:7002"
-    verifier-api = "http://localhost:7003"
-    user_email = "user@email.com"
-    user_password = "password"
   }
 }
