--- a/portal/src/main/resources/application.conf
+++ b/portal/src/main/resources/application.conf
@@ -4,16 +4,10 @@ portal {
     port = 9090
     baseUrl = "https://proxy.nessus-tech.io:8443"
   }
-  tls {
-    enabled = false
-    keyAlias = "ebsi.localhost"
-    keystoreFile = "tls/keystore.p12"
-    keystorePassword = "changeit"
-  }
   oauth {
-    endpointUrl = "https://proxy.nessus-tech.io:8443/oauth"
   }
   issuer {
+    issuerApi = "http://localhost:7002"
   }
   holder {
     walletApi = "http://localhost:7001"
@@ -21,11 +15,12 @@ portal {
     userPassword = "password"
   }
   verifier {
+    verifierApi = "http://localhost:7003"
   }
   database {
     jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
     username = "postgres"
-    password = "password"
+    password = "postgres"
     driverClassName = "org.postgresql.Driver"
   }
 }
