[#190] Add additional services to portal landing page

--- a/portal/src/main/resources/application.conf
+++ b/portal/src/main/resources/application.conf
@@ -4,18 +4,15 @@ portal {
     port = 9090
     baseUrl = "https://proxy.nessus-tech.io:8443"
   }
-  oauth {
-  }
-  issuer {
-    issuerApi = "http://localhost:7002"
-  }
   holder {
-    walletApi = "http://localhost:7001"
     userEmail = "user@email.com"
     userPassword = "password"
   }
-  verifier {
-    verifierApi = "http://localhost:7003"
+  service {
+    walletApiUrl = "http://localhost:7001"
+    issuerApiUrl = "http://localhost:7002"
+    verifierApiUrl = "http://localhost:7003"
+    demoWalletUrl = "http://localhost:7101"
   }
   database {
     jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
