--- a/service/src/test/resources/application.conf
+++ b/service/src/test/resources/application.conf
@@ -1,8 +1,13 @@
 portal {
   holder {
-    walletApi = "http://localhost:7001"
     userEmail = "user@email.com"
     userPassword = "password"
+  }
+  service {
+    walletApiUrl = "http://localhost:7001"
+    issuerApiUrl = "http://localhost:7002"
+    verifierApiUrl = "http://localhost:7003"
+    demoWalletUrl = "http://localhost:7101"
   }
   database {
     jdbcUrl = "jdbc:postgresql://localhost:30543/waltid"
